--- a/assignment_2/association_rules.ipynb
+++ b/assignment_2/association_rules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,51 +70,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       antecedents     consequents  antecedent support  \\\n",
-      "0                      (Adventure)        (Action)            0.128911   \n",
-      "25          (Adventure, 1980-2000)        (Action)            0.071058   \n",
-      "27               (Adventure, high)        (Action)            0.060509   \n",
-      "16                         (Drama)       (Romance)            0.051423   \n",
-      "19                         (Drama)       (evening)            0.051423   \n",
-      "..                             ...             ...                 ...   \n",
-      "71              (Drama, 1980-2000)         (Crime)            0.027104   \n",
-      "93              (Drama, 1980-2000)  (high, Comedy)            0.027104   \n",
-      "39              (Drama, 1980-2000)        (Comedy)            0.027104   \n",
-      "24           (Adventure, Thriller)        (Action)            0.026886   \n",
-      "90  (Adventure, medium, 1980-2000)        (Action)            0.026270   \n",
+      "                             antecedents           consequents  \\\n",
+      "0                            (Adventure)              (Action)   \n",
+      "25                (1980-2000, Adventure)              (Action)   \n",
+      "27               (High Score, Adventure)              (Action)   \n",
+      "16                               (Drama)             (Romance)   \n",
+      "42                               (Drama)   (1980-2000, Comedy)   \n",
+      "..                                   ...                   ...   \n",
+      "71                    (1980-2000, Drama)               (Crime)   \n",
+      "94                    (1980-2000, Drama)  (High Score, Comedy)   \n",
+      "40                    (1980-2000, Drama)              (Comedy)   \n",
+      "24                 (Adventure, Thriller)              (Action)   \n",
+      "90  (1980-2000, Adventure, Medium Score)              (Action)   \n",
       "\n",
-      "    consequent support   support  confidence       lift  leverage  conviction  \\\n",
-      "0             0.285824  0.128911    1.000000   3.498653  0.092065         inf   \n",
-      "25            0.285824  0.071058    1.000000   3.498653  0.050748         inf   \n",
-      "27            0.285824  0.060509    1.000000   3.498653  0.043214         inf   \n",
-      "16            0.070198  0.043531    0.846519  12.058944  0.039921    6.058073   \n",
-      "19            0.327725  0.056159    1.092089   3.332331  0.039306         inf   \n",
-      "..                 ...       ...         ...        ...       ...         ...   \n",
-      "71            0.075473  0.030441    1.123106  14.880917  0.028395         inf   \n",
-      "93            0.027925  0.028131    1.037879  37.166172  0.027374         inf   \n",
-      "39            0.033444  0.050936    1.879261  56.191790  0.050029         inf   \n",
-      "24            0.285824  0.026886    1.000000   3.498653  0.019201         inf   \n",
-      "90            0.285824  0.026270    1.000000   3.498653  0.018761         inf   \n",
+      "    antecedent support  consequent support   support  confidence       lift  \\\n",
+      "0             0.128911            0.285824  0.128911    1.000000   3.498653   \n",
+      "25            0.071058            0.285824  0.071058    1.000000   3.498653   \n",
+      "27            0.060509            0.285824  0.060509    1.000000   3.498653   \n",
+      "16            0.051423            0.070198  0.043531    0.846519  12.058944   \n",
+      "42            0.051423            0.046123  0.050936    0.990517  21.475524   \n",
+      "..                 ...                 ...       ...         ...        ...   \n",
+      "71            0.027104            0.075473  0.030441    1.123106  14.880917   \n",
+      "94            0.027104            0.027925  0.028131    1.037879  37.166172   \n",
+      "40            0.027104            0.033444  0.050936    1.879261  56.191790   \n",
+      "24            0.026886            0.285824  0.026886    1.000000   3.498653   \n",
+      "90            0.026270            0.285824  0.026270    1.000000   3.498653   \n",
       "\n",
-      "    zhangs_metric  \n",
-      "0        0.819865  \n",
-      "25       0.768806  \n",
-      "27       0.760173  \n",
-      "16       0.966789  \n",
-      "19       0.737853  \n",
-      "..            ...  \n",
-      "71       0.958787  \n",
-      "93       1.000203  \n",
-      "39       1.009567  \n",
-      "24       0.733907  \n",
-      "90       0.733443  \n",
+      "    leverage  conviction  zhangs_metric  \n",
+      "0   0.092065         inf       0.819865  \n",
+      "25  0.050748         inf       0.768806  \n",
+      "27  0.043214         inf       0.760173  \n",
+      "16  0.039921    6.058073       0.966789  \n",
+      "42  0.048564  100.583815       1.005122  \n",
+      "..       ...         ...            ...  \n",
+      "71  0.028395         inf       0.958787  \n",
+      "94  0.027374         inf       1.000203  \n",
+      "40  0.050029         inf       1.009567  \n",
+      "24  0.019201         inf       0.733907  \n",
+      "90  0.018761         inf       0.733443  \n",
       "\n",
       "[97 rows x 10 columns]\n"
      ]
@@ -126,21 +126,19 @@
     "df = pd.merge(df, date, on='movieId')\n",
     "\n",
     "# one hot encode the ratings\n",
-    "df['low'] = np.where(df['rating'] <= 2, True, False)\n",
-    "df['medium'] = np.where((df['rating'] > 2) & (df['rating'] < 4), True, False)\n",
-    "df['high'] = np.where(df['rating'] >= 4, True, False)\n",
+    "df['Low Score'] = np.where(df['rating'] <= 2, True, False)\n",
+    "df['Medium Score'] = np.where((df['rating'] > 2) & (df['rating'] < 4), True, False)\n",
+    "df['High Score'] = np.where(df['rating'] >= 4, True, False)\n",
     "\n",
     "# one hot encode the hours\n",
-    "df['morning'] = np.where((df['hour'] >= 6) & (df['hour'] < 12), True, False)\n",
-    "df['afternoon'] = np.where((df['hour'] >= 12) & (df['hour'] < 18), True, False)\n",
-    "df['evening'] = np.where((df['hour'] >= 18) & (df['hour'] < 24), True, False)\n",
-    "df['night'] = np.where((df['hour'] >= 0) & (df['hour'] < 6), True, False)\n",
+    "df['Morning'] = np.where((df['hour'] >= 6) & (df['hour'] < 12), True, False)\n",
+    "df['Afternoon'] = np.where((df['hour'] >= 12) & (df['hour'] < 18), True, False)\n",
+    "df['Evening'] = np.where((df['hour'] >= 18) & (df['hour'] < 24), True, False)\n",
+    "df['Night'] = np.where((df['hour'] >= 0) & (df['hour'] < 6), True, False)\n",
     "\n",
-    "#drop hour and userId columns\n",
+    "#drop useless columns\n",
     "df.drop('userId', axis=1, inplace=True)\n",
     "df.drop('hour', axis=1, inplace=True)\n",
-    "\n",
-    "#drop rating column and movieId column\n",
     "df.drop('rating', axis=1, inplace=True)\n",
     "df.drop('movieId', axis=1, inplace=True)\n",
     "df.drop('year', axis=1, inplace=True)\n",
